[tool.poetry]
name = "nasa-apis-wrapper"
version = "0.1.0"
description = "Python wrapper for NASA APIs"
authors = ["Jonathan Rodríguez <jonathanroddev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9"
requests = "^2.32"

[tool.poetry.dev-dependencies]
devtools = "^0.12.2"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
