[project]
name = "nasa-apis-wrapper"
version = "0.1.0"
description = "Python wrapper for NASA APIs"
authors = [
    {name = "Jonathan Rodríguez", email = "jonathanroddev@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9",
    "requests>=2.32",
]

[project.scripts]
local = "local:main"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "responses>=0.25.3",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
