[project]
name = "nasa-apis-wrapper"
version = "0.1.0"
description = "Python wrapper for NASA APIs"
authors = [
    {name = "Jonathan Rodríguez", email = "jonathanroddev@gmail.com"}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
keywords = [
    "nasa", "space", "astronomy", "api", "wrapper",
    "apod", "neows", "donki", "eonet", "epic", "exoplanet",
    "gibs", "cneos", "pydantic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.9",
    "requests>=2.32",
]

[project.urls]
Homepage = "https://github.com/jonathanroddev/nasa-apis-wrapper"
Repository = "https://github.com/jonathanroddev/nasa-apis-wrapper"
"Bug Tracker" = "https://github.com/jonathanroddev/nasa-apis-wrapper/issues"

[dependency-groups]
dev = [
    "devtools>=0.12.2",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "responses>=0.25.3",
    "black>=25.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
